# nonmarkov_qec

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: benchmarking.md  noise_generator.md  noise_injection.md  noise_model.md  results.md  small_codes.md  sum_of_ou.md  surface_code.md
docs/figures/: coarse_scan.csv  fine_scan.csv  tau_c_sweep.csv  tau_c_sweep_raw.csv
scripts/: coarse_scan.py  fine_scan.py  plot_matched_marginals.py  plot_ou_validation.py  plot_sum_of_ou_validation.py  tau_c_sweep.py
src/nonmarkov_qec/: __init__.py
src/nonmarkov_qec/benchmarks/: __init__.py  sweep.py  threshold.py
src/nonmarkov_qec/codes/: __init__.py  base.py  bit_flip.py  phase_flip.py  shor.py  surface_code.py
src/nonmarkov_qec/decoders/: __init__.py  matching.py
src/nonmarkov_qec/noise/: __init__.py  injection.py  ornstein_uhlenbeck.py  sum_of_ou.py  white.py
tests/: test_bit_flip.py  test_injection.py  test_injection_template.py  test_matching.py  test_ornstein_uhlenbeck.py  test_phase_flip.py  test_shor.py  test_smoke.py  test_sum_of_ou.py  test_surface_code.py  test_sweep.py  test_threshold.py  test_white.py
