[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nonmarkov_qec"
version = "0.1.0"
description = "Benchmarking quantum error correction codes under non-Markovian noise."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "Shivam Kamboj" }]
keywords = ["quantum", "error-correction", "qec", "noise", "stim", "non-markovian"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "numpy>=1.26",
    "scipy>=1.11",
    "matplotlib>=3.8",
    "stim>=1.13",
    "pymatching>=2.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "ruff>=0.6",
    "mypy>=1.10",
]
notebook = [
    "jupyter>=1.0",
    "seaborn>=0.13",
]

[project.urls]
Repository = "https://github.com/shivam1kamboj/nonmarkov_qec"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "statistical: Monte Carlo tests with stochastic tolerances",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "NPY", "RUF"]
ignore = ["E501"]  # line length handled by formatter

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
disallow_untyped_defs = true
plugins = []

[[tool.mypy.overrides]]
module = ["stim", "pymatching", "scipy.*", "matplotlib.*"]
ignore_missing_imports = true
